minor fix in meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="site that shows threatened species"
+      content="site where you can see animals"
     />
     <title>Zoo</title>
   </head>
